src/css/components/EmbedPlayer.scss
.EmbedPlayer {
    display: flex;
    flex-direction: row;
    justify-content: space-between;

    width: 100%;
    height: 100vh;

    padding: 8px;
    box-sizing: border-box;

    user-select: none;
}

.EmbedPlayer_Content {
    display: flex;
    gap: 10px;
}

.EmbedPlayer_Exit {
    position: absolute;
    top: 0;
    right: 0;
    color: transparent;
    padding: 10px;
    font-size: 20px;
    z-index: 1;
    transition: all 0.2s;

    &:hover {
        cursor: pointer;
        color: #fff;
        background-color: #00000060;
    }
}

.EmbedPlayer_TrackIcon {
    border-radius: 8px;
    width: fit-content;
    height: 100%;
    background-color: #A6A6A6;
}

.EmbedPlayer_TrackInfo {
    margin-top: 5px;
    display: flex;
    flex-direction: column;
    color: white;
}

.EmbedPlayer_ProgressBar {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 10px;
    width: 300px;

    p {
        color: white !important;
    }
}

.EmbedPlayer_Actions {
    display: flex;
    align-items: end;
    gap: 6px;
}

.EmbedPlayer_Button {
    color: white;
    font-size: 38px;
    align-self: flex-end;
    transition: all 0.1s;

    &:hover {
        cursor: pointer;
    }

    &:active {
        transform: scale(0.9);
    }
}

